cta textalign fix

--- a/master.scss
+++ b/master.scss
@@ -857,6 +857,9 @@ footer {
   h1 {
     white-space: nowrap;
   }
+  #cta h1,#cta p {
+    text-align: left !important;
+  }
   .cta-group {
     flex-direction: row;
     align-items: center !important;
